--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.eshophandling">
+    package="com.frag.eshophandling">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -18,10 +18,10 @@
         android:usesCleartextTraffic="true"
         android:hardwareAccelerated="true"
         android:theme="@style/Theme.EshopHandling">
-        <activity android:name=".MainActivity"  android:screenOrientation="portrait"   android:windowSoftInputMode="adjustNothing"></activity>
+        <activity android:name="com.frag.eshophandling.MainActivity"  android:screenOrientation="portrait"   android:windowSoftInputMode="adjustNothing"></activity>
         <activity
             android:screenOrientation="portrait"
-            android:name="com.example.eshophandling.ui.login.LoginActivity"
+            android:name="com.frag.eshophandling.ui.login.LoginActivity"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
