--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,8 @@ dependencies {
 
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC3'
 
+    // Dagger
+    def dagger_version = "2.38.1"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 }
