--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,7 @@ dependencies {
     def dagger_version = "2.38.1"
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+    def lottieVersion="3.6.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
